; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_math.c_Math_min.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_math.c_Math_min.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@INFINITY = common dso_local global i64 0, align 8
@S_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32, i32, i32*, i32*)* @Math_min to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @Math_min(i32* %0, i32* %1, i32 %2, i32 %3, i32* %4, i32* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i64, align 8
  %15 = alloca i64, align 8
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  store i32* %0, i32** %8, align 8
  store i32* %1, i32** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32* %4, i32** %12, align 8
  store i32* %5, i32** %13, align 8
  %18 = call i32 @TRACE(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  %19 = load i32, i32* %11, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %30, label %21

21:                                               ; preds = %6
  %22 = load i32*, i32** %13, align 8
  %23 = icmp ne i32* %22, null
  br i1 %23, label %24, label %28

24:                                               ; preds = %21
  %25 = load i64, i64* @INFINITY, align 8
  %26 = call i32 @jsval_number(i64 %25)
  %27 = load i32*, i32** %13, align 8
  store i32 %26, i32* %27, align 4
  br label %28

28:                                               ; preds = %24, %21
  %29 = load i32, i32* @S_OK, align 4
  store i32 %29, i32* %7, align 4
  br label %82

30:                                               ; preds = %6
  %31 = load i32*, i32** %8, align 8
  %32 = load i32*, i32** %12, align 8
  %33 = getelementptr inbounds i32, i32* %32, i64 0
  %34 = load i32, i32* %33, align 4
  %35 = call i32 @to_number(i32* %31, i32 %34, i64* %14)
  store i32 %35, i32* %17, align 4
  %36 = load i32, i32* %17, align 4
  %37 = call i64 @FAILED(i32 %36)
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %39, label %41

39:                                               ; preds = %30
  %40 = load i32, i32* %17, align 4
  store i32 %40, i32* %7, align 4
  br label %82

41:                                               ; preds = %30
  store i32 1, i32* %16, align 4
  br label %42

42:                                               ; preds = %70, %41
  %43 = load i32, i32* %16, align 4
  %44 = load i32, i32* %11, align 4
  %45 = icmp ult i32 %43, %44
  br i1 %45, label %46, label %73

46:                                               ; preds = %42
  %47 = load i32*, i32** %8, align 8
  %48 = load i32*, i32** %12, align 8
  %49 = load i32, i32* %16, align 4
  %50 = zext i32 %49 to i64
  %51 = getelementptr inbounds i32, i32* %48, i64 %50
  %52 = load i32, i32* %51, align 4
  %53 = call i32 @to_number(i32* %47, i32 %52, i64* %15)
  store i32 %53, i32* %17, align 4
  %54 = load i32, i32* %17, align 4
  %55 = call i64 @FAILED(i32 %54)
  %56 = icmp ne i64 %55, 0
  br i1 %56, label %57, label %59

57:                                               ; preds = %46
  %58 = load i32, i32* %17, align 4
  store i32 %58, i32* %7, align 4
  br label %82

59:                                               ; preds = %46
  %60 = load i64, i64* %15, align 8
  %61 = load i64, i64* %14, align 8
  %62 = icmp slt i64 %60, %61
  br i1 %62, label %67, label %63

63:                                               ; preds = %59
  %64 = load i64, i64* %15, align 8
  %65 = call i64 @isnan(i64 %64)
  %66 = icmp ne i64 %65, 0
  br i1 %66, label %67, label %69

67:                                               ; preds = %63, %59
  %68 = load i64, i64* %15, align 8
  store i64 %68, i64* %14, align 8
  br label %69

69:                                               ; preds = %67, %63
  br label %70

70:                                               ; preds = %69
  %71 = load i32, i32* %16, align 4
  %72 = add i32 %71, 1
  store i32 %72, i32* %16, align 4
  br label %42

73:                                               ; preds = %42
  %74 = load i32*, i32** %13, align 8
  %75 = icmp ne i32* %74, null
  br i1 %75, label %76, label %80

76:                                               ; preds = %73
  %77 = load i64, i64* %14, align 8
  %78 = call i32 @jsval_number(i64 %77)
  %79 = load i32*, i32** %13, align 8
  store i32 %78, i32* %79, align 4
  br label %80

80:                                               ; preds = %76, %73
  %81 = load i32, i32* @S_OK, align 4
  store i32 %81, i32* %7, align 4
  br label %82

82:                                               ; preds = %80, %57, %39, %28
  %83 = load i32, i32* %7, align 4
  ret i32 %83
}

declare dso_local i32 @TRACE(i8*) #1

declare dso_local i32 @jsval_number(i64) #1

declare dso_local i32 @to_number(i32*, i32, i64*) #1

declare dso_local i64 @FAILED(i32) #1

declare dso_local i64 @isnan(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
